--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "private": true,
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.6.0",
     "@nestjs/common": "^7.0.0",
     "@nestjs/config": "^1.0.2",
     "@nestjs/core": "^7.0.0",
@@ -27,6 +28,8 @@
     "cookie-parser": "^1.4.5",
     "core-js": "^3.6.5",
     "dotenv": "^10.0.0",
+    "handlebars": "^4.7.7",
+    "nodemailer": "^6.7.0",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "pg": "^8.7.1",
