--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
   },
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.2.0",
+    "@mui/material": "^5.0.6",
     "@nestjs-modules/mailer": "^1.6.0",
     "@nestjs/common": "^7.0.0",
     "@nestjs/config": "^1.0.2",
@@ -18,16 +24,19 @@
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^8.0.2",
     "@nrwl/nest": "^13.0.2",
+    "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/passport-jwt": "^3.0.6",
     "@types/uuid": "^8.3.1",
+    "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
     "core-js": "^3.6.5",
     "dotenv": "^10.0.0",
+    "eslint-config-standard-with-typescript": "^21.0.1",
     "handlebars": "^4.7.7",
     "nodemailer": "^6.7.0",
     "passport": "^0.5.0",
