--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^8.0.2",
-    "@nrwl/nest": "^13.0.2",
     "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.2",
+    "@types/express-session": "^1.17.4",
+    "@types/multer": "^1.4.7",
     "@types/passport-jwt": "^3.0.6",
     "@types/uuid": "^8.3.1",
     "axios": "^0.24.0",
@@ -36,7 +37,8 @@
     "cookie-parser": "^1.4.5",
     "core-js": "^3.6.5",
     "dotenv": "^10.0.0",
-    "eslint-config-standard-with-typescript": "^21.0.1",
+    "express-session": "^1.17.2",
+    "file-type": "^17.1.1",
     "handlebars": "^4.7.7",
     "nodemailer": "^6.7.0",
     "passport": "^0.5.0",
@@ -78,20 +80,24 @@
     "@types/react-is": "17.0.2",
     "@types/react-router-dom": "5.3.1",
     "@types/styled-components": "5.1.15",
-    "@typescript-eslint/eslint-plugin": "~4.33.0",
-    "@typescript-eslint/parser": "~4.33.0",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
     "babel-jest": "27.2.3",
     "babel-plugin-styled-components": "1.10.7",
     "cypress": "^8.3.0",
     "eslint": "7.32.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-prettier": "8.1.0",
+    "eslint-config-standard-with-typescript": "^21.0.1",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.25.2",
     "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "7.26.1",
     "eslint-plugin-react-hooks": "4.2.0",
     "jest": "27.2.3",
-    "prettier": "^2.3.1",
+    "prettier": "^2.5.1",
     "ts-jest": "27.0.5",
     "typescript": "~4.3.5"
   }
